--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.header, .footer {
+  border: 5px solid green;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
